moved content into main section to prevent overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,9 @@ body {
   font-size: 16px;
   max-width: 100%;
   overflow-x: hidden;
+}
+
+main {
   position: relative;
 }
 
@@ -45,7 +48,7 @@ section {
   flex-direction: column;
   gap: 0.25rem;
   /* this is where section separation happens */
-  margin: 35vh 1rem; 
+  margin: 30vh 1rem; 
   /* -- */
   padding: 2rem 0;
   border: 1px solid;
@@ -70,8 +73,7 @@ section.aside {
   font-weight: 100;
   text-align: right;
   max-width: 45vw;
-  margin-left: auto;
-  margin-bottom: 15vh;
+  margin: 40vh 3vh 5vh auto;
 }
 
 section.about {
@@ -174,7 +176,7 @@ footer {
 }
 
 .blob-bg.small {
-  top: 450px;
+  top: 10vh;
   right: -20%;
   animation: blobSpin 100s linear infinite;
 }
@@ -186,7 +188,7 @@ footer {
 }
 
 .blob-bg.big {
-  top: 540px;
+  top: 30vh;
   left: -30%;
   opacity: 0.6;
   overflow: clip;
